# WindNODE

./: .gitignore  Cargo.toml  README.md  pyproject.toml
outputs/: neural_ode_wind_power.onnx  neural_ode_wind_power.onnx.data  neural_ode_wind_power.pth
outputs/cnn/: cnn_wind_power_22-04-2026_02-58PM.onnx  cnn_wind_power_22-04-2026_02-58PM.onnx.data  cnn_wind_power_22-04-2026_02-58PM.pth  cnn_y_scaler_22-04-2026_02-58PM.pkl
outputs/lstm/: lstm_wind_power_23-04-2026_11-00AM.onnx  lstm_wind_power_23-04-2026_11-00AM.onnx.data  lstm_wind_power_23-04-2026_11-00AM.pth  lstm_x_scaler_23-04-2026_11-00AM.pkl  lstm_y_scaler_23-04-2026_11-00AM.pkl
outputs/node/: neural_ode_wind_power_17-04-2026_06-46PM.onnx  neural_ode_wind_power_17-04-2026_06-46PM.pth  neural_ode_wind_power_21-04-2026_08-31PM.onnx  neural_ode_wind_power_21-04-2026_08-31PM.pth  neural_ode_wind_power_22-04-2026_12-12PM.onnx  neural_ode_wind_power_22-04-2026_12-12PM.onnx.data  neural_ode_wind_power_22-04-2026_12-12PM.pth  x_scaler_21-04-2026_08-31PM.pkl
scripts/: cnn_impl.py  lstm_impl.py  node_impl.py  run_cnn_impl.sh  run_lstm_impl.sh  run_node_impl.sh
src/: lib.rs
src/WindNODEpy/: __init__.py  cnn.py  dataviz.py  lstm.py  node.py
